# Project

./: .env  .gitignore  CNAME  README.md  asset-manifest.json  index.html  main.py  package-lock.json  package.json  pyproject.toml  route.gpx
.github/workflows/: main.yml
backend/: main.py  weather.py
frontend/static/: style.css
frontend/static/js/: script.js
frontend/templates/: index.html
gpxviewer/: package.json
gpxviewer/public/: index.html  route.gpx
gpxviewer/src/components/: Weather.jsx
gpxviewer/src/styles/: app.css
my-app/src/data/: trekking_poles_weather.json  weather_codes.json
public/: index.html
src/: App.jsx  MainPage.jsx  MobileMenu.jsx  index.jsx
src/components/: ElevationChart.jsx  Map.jsx  TrekkingPoles.jsx  Weather.jsx
src/styles/: app.css  main.css
static/: script.js  style.css
static/css/: main.30dc28a9.css  main.30dc28a9.css.map  main.38f5c91e.css  main.38f5c91e.css.map  main.87cdc9a0.css  main.87cdc9a0.css.map  main.aaf1764e.css  main.aaf1764e.css.map
static/js/: main.0a17bf26.js  main.0a17bf26.js.LICENSE.txt  main.31d5f1b6.js  main.3c8ae179.js  main.3c8ae179.js.map  main.41d08401.js  main.41d08401.js.map  main.97d2a450.js  main.97d2a450.js.map  main.b57dbf60.js  main.b57dbf60.js.map  main.b97d9ad5.js  main.b97d9ad5.js.map  main.c3cd5a9d.js  main.c3cd5a9d.js.map  main.e7d88bc4.js  main.e7d88bc4.js.map  main.ede49ce9.js
templates/: index.html
